--- a/themes/vue/layout/partials/main_menu.ejs
+++ b/themes/vue/layout/partials/main_menu.ejs
@@ -1,6 +1,6 @@
 <li>
     <form id="search-form">
-        <input type="text" id="search-query-<%- context %>" class="search-query st-default-search-input">
+        <input type="text" style="display: none;" id="search-query-<%- context %>" class="search-query st-default-search-input">
     </form>
 </li>
 <% for (var link in site.data.menu) {
