--- a/themes/vue/layout/layout.ejs
+++ b/themes/vue/layout/layout.ejs
@@ -3,7 +3,7 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
   <head>
-    <title><%- page.title ? page.title + ' — ' : '' %>Vue.js</title>
+    <title><%- page.title ? page.title + ' — ' : '' %>doc-common</title>
     <meta charset="utf-8">
     <meta name="description" content="<%- theme.site_description %>">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
@@ -106,14 +106,14 @@
     ].forEach(function (selector) {
       if (!document.querySelector(selector)) return
       // search index defaults to v2
-      var match = window.location.pathname.match(/^\/(v\d+)/)
-      var version = match ? match[1] : 'v2'
+      // var match = window.location.pathname.match(/^\/(v\d+)/)
+      // var version = match ? match[1] : 'v2'
       docsearch({
-      appId: 'BH4D9OD16A',
-      apiKey: '5638280abff9d207417bb03be05f0b25',
-      indexName: 'vuejs_cn2',
+      appId: '6IDLWGB5ZQ',
+      apiKey: 'b72fff3bda39494a6e9e078c50b77a48',
+      indexName: 'tydic-vue-component-base',
       inputSelector: selector,
-      algoliaOptions: { facetFilters: ["version:" + version] }
+      // algoliaOptions: { facetFilters: ["version:" + version] }
       })
     })
     </script>
